# mosaico-backend

./: .gitignore  README.md  README.pt-BR.md  main.py  pyproject.toml  requirements.txt
instance/: vault.db
models/: __init__.py  user.py  vault.py
routes/: __init__.py  auth.py  vault.py
tests/: test_user.py  test_vault.py
