[project]
name = "mosaico-backend"
version = "0.1.0"
description = "Mosaico Vault Management API - RESTful API for user authentication, vault management, and file operations with steganography encryption"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-openapi3[swagger,swagger-ui]>=4.3.2",
    "flask-sqlalchemy>=3.1.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
